--- a/CONTENTIEUX_TF/Cours_tex/biblio.tex
+++ b/CONTENTIEUX_TF/Cours_tex/biblio.tex
@@ -1,3 +1,7 @@
+
+\documentclass[Cours_contentieuxTF2026.tex]{subfiles}
+
+\begin{document}
 \chapter*{Bibliographie}
 \begin{itemize}[font=\color{magenta} \Large, label=\ding{230}]
 	\item Jean SCHMIDT, Emmanuel KORNPROBST, Fiscalité Immobilière, $10^{e}$ édition Litec Fiscal (2009)
@@ -5,3 +9,5 @@
 	\item  Code Général des impôts du Togo édition 2025
 	\item Livre des procédures fiscale édition 2025
 \end{itemize}
+
+\end{document}
