--- a/CONTENTIEUX_TF/Cours_tex/pagegardIFFD.tex
+++ b/CONTENTIEUX_TF/Cours_tex/pagegardIFFD.tex
@@ -34,7 +34,7 @@
 		\begin{center}
 			\setlength{\fboxsep}{15pt}
 			\doublebox{\parbox{0.9\linewidth}{
-					\centering \LARGE \textbf{\textcolor{primarycolor}{MANUEL DE FORMATION SUR :\\[0.5cm] TAXES FONCIÈRES}}
+					\centering \LARGE \textbf{\textcolor{primarycolor}{MANUEL DE FORMATION SUR :\\[0.5cm] CONTENTIEUX DES TAXES FONCIÈRES}}
 			}}
 		\end{center}
 		
