--- a/CONTENTIEUX_TF/Cours_tex/Chap2.tex
+++ b/CONTENTIEUX_TF/Cours_tex/Chap2.tex
@@ -51,6 +51,54 @@ Lorsque la réclamation n’aboutit pas à une solution satisfaisante et qu’il
 recours à l’arbitrage de la Commission administrative des recours prévue à l’article
 356 du LPF, le contribuable peut saisir la juridiction compétente.
 
+\subsection{Contestation de la base imposable}
+La base de la taxe foncière repose sur la \textbf{Valeur Locative Cadastrale (VLC)}. Le litige porte généralement sur les paramètres de calcul suivants :
+
+\begin{itemize}
+	\item \textbf{La méthode d'évaluation :} Le contribuable peut contester le choix du local de référence servant de base à la méthode par comparaison. Si le local choisi par l'administration est nettement plus luxueux ou mieux situé, la base sera surévaluée.
+	\textit{Exemple : Un contribuable conteste l'évaluation de sa villa de standing moyen car l'administration a utilisé comme terme de comparaison une villa de grand luxe située dans une zone résidentielle diplomatique.}
+	
+	\item \textbf{Le tarif au mètre carré :} Il s'agit d'une discussion sur la classification du bâtiment selon son standing (matériaux utilisés) ou sa zone géographique. Une erreur de zonage peut entraîner l'application d'un tarif trop élevé.
+	\textit{Exemple : Un immeuble situé en bordure d'une voie non bitumée est taxé au tarif des « zones A » (voies principales). Le propriétaire peut demander un reclassement en zone inférieure sur preuve photographique.}
+	
+	\item \textbf{Les éléments de confort :} Le désaccord porte sur l'application de coefficients de majoration liés à des équipements spécifiques. Le contentieux naît souvent de la vétusté de ces équipements ou de leur absence réelle.
+	\textit{Exemple : L'administration applique une majoration de 15 \% pour « piscine et climatisation centrale ». Le redevable prouve par constat que la piscine est hors d'usage depuis plusieurs années.}
+	
+	\item \textbf{L'abattement forfaitaire :} Bien que le taux d'abattement (50 \% pour la TFPB au Togo) soit fixe, l'erreur peut porter sur l'assiette brute à laquelle il s'applique, notamment sur les dépendances.
+\end{itemize}
+
+\subsection{Contestation du redevable}
+Le principe fondamental est que la taxe est due pour l'année entière par le \textbf{propriétaire au 1er janvier}. Le contentieux naît lorsque l'identité de l'assujetti est erronée :
+
+\begin{itemize}
+	\item \textbf{Mutation non enregistrée :} L'ancien propriétaire continue de recevoir l'avis car le transfert de propriété n'a pas été mis à jour au Cadastre ou à la Conservation Foncière.
+	\textit{Exemple : Monsieur A a vendu son terrain en 2024 mais reçoit l'avis de 2025. Il doit produire l'acte de vente pour faire basculer la taxe au nom de l'acquéreur.}
+	
+	\item \textbf{Démembrement de propriété :} Conflit entre l'usufruitier et le nu-propriétaire. Selon le CGI, c'est l'usufruitier (celui qui a la jouissance) qui est le redevable légal.
+	\textit{Exemple : Des héritiers nus-propriétaires contestent un avis qui devrait être établi au nom du conjoint survivant usufruitier.}
+	
+	\item \textbf{Indivision :} Contestation sur la répartition de la taxe entre co-indivisaires. L'administration émet souvent un avis unique, ce qui peut mener à des contestations sur la part de chacun.
+\end{itemize}
+
+\subsection{Contestation des exonérations et dégrèvements}
+Le contribuable revendique le bénéfice d'une dispense de paiement prévue par le Code Général des Impôts (CGI) :
+
+\begin{itemize}
+	\item \textbf{Exonérations permanentes(Critère d'affectation :} Refus de l'administration de reconnaître le caractère public, social ou cultuel d'un immeuble (ex: écoles, lieux de culte). Le litige porte souvent sur l'usage réel du bâtiment.\\
+	\textit{Exemple : Une association conteste son imposition car son immeuble abrite un dispensaire gratuit, alors que l'administration y voit une activité lucrative.}\\
+	
+	\item \textbf{Exonérations temporaires(Le piège déclaratif) :} C'est le contentieux le plus fréquent. Il porte sur la date d'achèvement des travaux ou sur le non-respect du délai de déclaration (90 jours après l'achèvement).\\
+	\textit{Exemple : Un propriétaire apporte la preuve (certificat d'achèvement ou factures de service public) que son immeuble n'était pas habitable à la date retenue par le service, afin de sauver son droit à l'exonération temporaire.}\\
+	
+	\item \textbf{Le dégrèvement pour vacance de maison (Conditions cumulatives) :}Un propriétaire peut demander une réduction de taxe si son immeuble destiné à la location est resté vide.\\
+	L'administration rejette souvent ces demandes si les trois conditions cumulatives ne sont pas prouvées par le contribuable :
+	\begin{enumerate}
+		\item La vacance est indépendante de la volonté du propriétaire (il a essayé de louer, au prix du marché, sans succès).
+		\item La vacance a duré au moins 3 mois.
+		\item Elle concerne la totalité ou une partie susceptible de location séparée.
+	\end{enumerate}
+\end{itemize}
+
 \subsection{Le rôle déterminant du cadastre dans le contentieux de l’assiette}
 
 Dans le domaine des taxes foncières, le contentieux de l’assiette est étroitement lié
@@ -63,6 +111,48 @@ concernent le plus souvent :
 	\item son état d’achèvement ;
 	\item les droits réels exercés sur le bien.
 \end{itemize}
+
+\subsubsection{Erreurs de consistance des immeubles}
+La consistance d'un immeuble désigne l'ensemble des éléments qui le composent et définissent sa nature. Le litige porte ici sur la description physique globale du bien.
+
+\begin{itemize}
+	\item \textbf{La qualification du bâti :} Contestation portant sur le fait de savoir si un ouvrage doit être taxé à la TFPB ou à la TFPNB.
+	\textit{Exemple : Un propriétaire conteste l'imposition à la taxe bâtie d'un hangar ouvert sans fondations profondes, estimant qu'il ne s'agit pas d'une construction fixée à demeure au sens du CGI.}
+	
+	\item \textbf{L'état d'achèvement :} Déterminer si un immeuble est « habitable » ou exploitable.
+	\textit{Exemple : Le fisc taxe un immeuble comme achevé alors que le gros œuvre est fini mais que les installations essentielles (eau, électricité) ne sont pas posées.}
+	
+	\item \textbf{La disparition du bien :} Cas des immeubles démolis, incendiés ou s'étant écroulés, mais qui continuent de figurer comme imposables sur le rôle foncier.
+\end{itemize}
+
+\subsubsection{Erreurs de surface, d’usage ou de catégorie}
+Ces erreurs techniques impactent directement le calcul de la Valeur Locative Cadastrale (VLC).
+
+\begin{itemize}
+	\item \textbf{La superficie :} Écart entre la contenance indiquée sur le titre foncier ou le plan cadastral et la réalité du terrain.
+	\textit{Exemple : Une erreur de saisie dans la matrice indique 1 000 m² au lieu de 100 m², multipliant la base imposable par dix.}
+	
+	\item \textbf{L'usage du bien :} Distinction entre usage d'habitation, usage commercial ou usage industriel. Les tarifs varient considérablement selon l'affectation.
+	\textit{Exemple : Un appartement situé au rez-de-chaussée est utilisé exclusivement pour l'habitation, mais l'administration le taxe au tarif « bureau/commerce » en raison de sa situation géographique en centre-ville.}
+	
+	\item \textbf{La catégorie de standing :} Classement de l'immeuble (Économique, Moyen, Luxe). 
+	\textit{Exemple : Un immeuble classé en catégorie « Grand Luxe » en 2010 qui n'a subi aucun entretien et présente aujourd'hui des signes de délabrement évidents justifiant un reclassement en catégorie inférieure.}
+\end{itemize}
+
+\subsubsection{Litiges liés aux données cadastrales}
+Ils concernent la fiabilité des informations d'identification stockées dans le Système d'Information Cadastral (SIC).
+
+\begin{itemize}
+	\item \textbf{Les erreurs d'identification parcellaire :} Confusion entre deux parcelles voisines ou erreur sur le numéro du titre foncier, entraînant une imposition croisée.
+	
+	\item \textbf{La superposition de feuillets :} Dans les zones où le cadastre est ancien ou en cours de rénovation, deux propriétaires peuvent être taxés pour le même espace géographique en raison de plans de lotissement divergents.
+	
+	\item \textbf{La mise à jour de la matrice :} Retard dans l'enregistrement des divisions de parcelles (morcellement) ou des fusions, rendant le rôle foncier obsolète par rapport à la réalité juridique et physique.
+\end{itemize}
+
+\subsubsection{Le rôle de l'expert cadastral dans le règlement du litige}
+Dans ce type de contentieux, l'administration fonde sa décision sur un \textbf{constat contradictoire sur les lieux}. Le géomètre-cadastreur intervient pour effectuer de nouveaux mesurages et vérifier l'usage réel du bien. Son rapport technique lie généralement l'autorité de décision pour le prononcé du dégrèvement.
+
 
 Les services du cadastre, intégrés à la Direction du Cadastre et de la Conservation
 Foncière de l’Office Togolais des Recettes, interviennent comme experts techniques
@@ -78,16 +168,41 @@ conditions dans lesquelles l’administration exige le paiement de la taxe.
 
 \subsection{Champ du contentieux du recouvrement}
 
-Le contentieux du recouvrement concerne notamment :
-\begin{itemize}
-	\item l’obligation de payer la dette fiscale ;
-	\item la régularité des actes de poursuite ;
-	\item l’extinction de la dette par paiement, compensation ou prescription ;
-	\item la prise en compte d’un sursis de paiement régulièrement accordé.
+Le contentieux du recouvrement a pour objet d'arrêter ou d'annuler les poursuites engagées contre le contribuable. Contrairement au contentieux de l'assiette qui vise à réduire l'impôt, le contentieux du recouvrement vise à contester la régularité de la procédure de perception. 
+Il se divise classiquement en deux types d'oppositions :
+\begin{itemize}[label=\tiny$\blacksquare$]
+	\item \textbf{L'opposition à l'acte :} Contestation de la régularité formelle de l'acte de poursuite.
+	\item \textbf{L'opposition à l'exigibilité :} Contestation de l'existence de l'obligation de payer (paiement déjà effectué, prescription, etc.).
 \end{itemize}
 
-Il relève principalement de la compétence du comptable public et peut être porté
+Le contentieux du recouvrement relève principalement de la compétence du comptable public et peut être porté
 devant le juge compétent dans les conditions prévues par le LPF.
+
+\subsection{Contestation des actes de poursuite}
+Les actes de poursuite (commandement de payer, saisie, Avis à Tiers Détenteur - ATD) peuvent faire l'objet d'une contestation pour des motifs de forme ou de fond :
+
+\begin{itemize}
+	\item \textbf{Les vices de forme :} Un acte de poursuite est nul s'il ne respecte pas les mentions obligatoires prévues par le LPF (identification précise du comptable, montant exact de la dette, nature de la taxe).
+	\textit{Exemple : Un commandement de payer qui ne mentionne pas les délais de recours ou qui comporte une erreur sur l'identité du destinataire.}
+	
+	\item \textbf{L'absence de titre exécutoire :} Aucune poursuite ne peut être engagée si la taxe n'a pas été préalablement rendue exécutoire par l'homologation d'un rôle ou l'émission d'un titre de perception.
+	\textit{Exemple : L'administration engage une saisie sur un compte bancaire alors que l'avis de mise en recouvrement n'a jamais été notifié au contribuable.}
+	
+	\item \textbf{L'existence d'un paiement préalable :} Le contribuable apporte la preuve que la taxe a déjà été acquittée, souvent suite à une erreur d'imputation comptable.
+	\textit{Exemple : Un redevable reçoit un ATD pour une taxe foncière qu'il a déjà payée par virement bancaire ou au guichet, quittance à l'appui.}
+\end{itemize}
+
+\subsection{Prescription et extinction de la dette}
+La prescription est un mode d'extinction de la dette fiscale par l'écoulement du temps. En matière de taxes foncières, l'action en recouvrement est encadrée par des délais stricts.
+
+\begin{itemize}
+	\item \textbf{Le délai de prescription :} L'action en recouvrement des comptables de l'OTR se prescrit par un délai de \textbf{quatre (04) ans} à compter de la date de mise en recouvrement du rôle.
+	
+	\item \textbf{L'interruption de la prescription :} La prescription peut être interrompue par tout acte comportant reconnaissance de dette de la part du contribuable ou par des actes de poursuite notifiés par l'administration (ex: un commandement de payer).
+	\textit{Exemple : Si l'administration reste inactive pendant plus de 4 ans sans poser d'acte interruptif, le contribuable peut invoquer la prescription pour obtenir l'extinction de sa dette et l'annulation des poursuites tardives.}
+	
+	\item \textbf{La remise gracieuse :} Bien qu'appartenant techniquement à la juridiction gracieuse, l'obtention d'une remise totale ou partielle des frais de poursuite ou des pénalités de retard éteint une partie de la créance et met fin au contentieux du recouvrement pour cette partie.
+\end{itemize}
 
 \subsection{Autonomie du contentieux du recouvrement}
 
@@ -152,8 +267,58 @@ compte tenu de la fréquence des erreurs liées à l’actualisation des donnée
 cadastrales. Ils traduisent le souci d’équité et de bonne administration fiscale et
 contribuent à la fiabilité du système d’imposition foncière.
 
-\section*{Conclusion du chapitre}
-\addcontentsline{toc}{section}{Conclusion du chapitre}
+
+\section{Distinction entre contentieux, gracieux et procédures d’office}
+
+La gestion des réclamations en matière de taxes foncières repose sur une distinction tripartite fondamentale. Bien que l'objectif du contribuable soit souvent identique (payer moins), les fondements juridiques, les autorités de décision et les recours varient selon la nature de la demande.
+
+\subsection{Critères juridiques de distinction}
+
+Il est impératif pour l'instructeur au Cadastre de qualifier correctement la demande dès sa réception selon les critères suivants :
+
+\begin{itemize}[label=\tiny$\blacksquare$]
+	\item \textbf{Le Contentieux (Le droit) :} Il repose sur une contestation de la légalité de l'impôt. Le contribuable soutient que l'Administration a fait une erreur de fait ou de droit. 
+	\textit{Exemple : « Vous me taxez pour 500 m², alors que mon titre foncier indique 300 m². »}
+	
+	\item \textbf{Le Gracieux (L'équité) :} Le contribuable reconnaît que l'impôt est légalement dû et correctement calculé, mais il invoque une impossibilité de payer due à sa situation de précarité.
+	\textit{Exemple : « Je reconnais devoir cette taxe foncière, mais suite à un incendie de mon commerce, je sollicite une remise des pénalités. »}
+	
+	\item \textbf{La Procédure d'office (La régularisation) :} C'est une action unilatérale de l'Administration qui rectifie d'elle-même une erreur sans attendre une plainte du contribuable, ou suite à un constat matériel flagrant.
+	\textit{Exemple : Le service du Cadastre s'aperçoit d'un double emploi sur une parcelle et annule d'office l'une des deux cotes d'impôt.}
+\end{itemize}
+
+\subsection{Conséquences procédurales}
+
+La qualification du dossier détermine le régime juridique applicable, résumé dans le tableau comparatif ci-dessous :
+
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{|l|p{4cm}|p{4cm}|p{3.5cm}|}
+		\hline
+		\textbf{Critère} & \textbf{Contentieux} & \textbf{Gracieux} & \textbf{D'office} \\ \hline
+		\textbf{Fondement} & Erreur de l'Administration & Gêne, indigence, malheur & Erreur matérielle manifeste \\ \hline
+		\textbf{Délai de dépôt} & Très strict (Forclusion) & Aucun délai (Permanent) & Aucun (Initiative OTR) \\ \hline
+		\textbf{Pouvoir} & Pouvoir lié (La loi) & Pouvoir discrétionnaire & Pouvoir de régularisation \\ \hline
+		\textbf{Recours} & Juge Administratif & Recours hiérarchique uniquement & N/A \\ \hline
+	\end{tabular}
+	\caption{Comparaison des procédures en matière foncière}
+\end{table}
+
+
+
+\subsection{L'importance de l'aiguillage pour le Cadastre}
+
+Une mauvaise orientation du dossier peut porter préjudice au contribuable (perte de ses droits à agir devant le juge) ou à l'Administration (annulation de la procédure pour vice de forme). 
+
+\begin{itemize}
+	\item Si la demande porte sur une \textbf{erreur de surface}, elle doit être traitée en \textbf{contentieux} (ou d'office si l'erreur est reconnue par le service).
+	\item Si la demande porte sur une \textbf{demande de délai} ou de remise de pénalités suite à des difficultés financières, elle doit basculer vers la \textbf{juridiction gracieuse}, même si le contribuable a utilisé le mot « réclamation » dans son courrier.
+\end{itemize}
+
+Le cadre du Cadastre doit donc faire preuve de vigilance : la dénomination donnée par le contribuable à son courrier ne lie pas l'Administration ; c'est le \textbf{contenu} et l'objet réel de la demande qui déterminent la procédure à suivre.
+
+\section*{Conclusion}
+%\addcontentsline{toc}{section}{Conclusion du chapitre}
 
 La typologie du contentieux des taxes foncières met en évidence la diversité des
 litiges susceptibles de naître de l’établissement et du recouvrement de cet impôt
