--- a/CONTENTIEUX_TF/Cours_tex/Chap3.tex
+++ b/CONTENTIEUX_TF/Cours_tex/Chap3.tex
@@ -3,6 +3,214 @@
 
 \begin{document}
 
-\chapter{Taxe Foncière sur les Propriétés Non Bâties (TFPNB)}
+\chapter{La procédure contentieuse (contentieux de droit)}
+
+La procédure contentieuse constitue le cœur du contentieux fiscal. Elle organise,
+dans un cadre juridique strict, les modalités selon lesquelles le contribuable peut
+contester une imposition mise à sa charge et obtenir, le cas échéant, la réparation
+d’une erreur commise par l’administration fiscale. En matière de taxes foncières,
+cette procédure revêt une importance particulière en raison de la nature technique
+de l’assiette et du rôle déterminant du cadastre dans la formation de l’impôt.
+
+Le contentieux fiscal togolais est structuré autour du principe du préalable
+administratif obligatoire, qui confère à l’administration fiscale un rôle central dans
+la résolution des litiges. La phase juridictionnelle n’intervient qu’en cas d’échec de la
+procédure administrative, laquelle demeure la voie normale et privilégiée de
+règlement des différends fiscaux.
+
+\section{Le principe du préalable administratif}
+
+\subsection{Fondement juridique}
+
+Le principe du préalable administratif constitue l’un des fondements essentiels du
+contentieux fiscal. En droit togolais, il est consacré par le Livre des procédures
+fiscales, notamment par l’article 367, aux termes duquel toute contestation relative à
+une imposition doit, à peine d’irrecevabilité, être précédée d’une réclamation
+adressée à l’administration fiscale compétente.
+
+Ce principe s’applique pleinement aux taxes foncières, qu’il s’agisse de contestations
+portant sur l’assiette, la liquidation ou, dans certaines hypothèses, le recouvrement
+de l’impôt. Il traduit la volonté du législateur de confier à l’administration fiscale la
+mission première de corriger ses propres erreurs avant toute intervention du juge.
+
+\subsection{Portée et justification}
+
+Le préalable administratif présente une double justification. D’une part, il permet à
+l’administration fiscale de réexaminer l’imposition contestée à la lumière des
+arguments du contribuable et, le cas échéant, de procéder à un dégrèvement sans
+recours juridictionnel. D’autre part, il contribue à désengorger les juridictions en
+limitant les contentieux portés devant le juge aux seuls litiges n’ayant pu être réglés
+au stade administratif.
+
+Dans le domaine des taxes foncières, ce principe revêt une portée particulière en
+raison de la technicité des éléments d’assiette. La phase administrative permet
+souvent de résoudre le litige par une simple vérification cadastrale ou une correction
+matérielle, sans qu’il soit nécessaire de saisir le juge.
+
+\section{La réclamation contentieuse préalable}
+
+La réclamation contentieuse constitue l’acte par lequel le contribuable saisit
+l’administration fiscale d’une contestation portant sur une imposition déterminée.
+Elle ouvre formellement la procédure contentieuse administrative.
+
+\subsection{Conditions de délai}
+
+La réclamation contentieuse doit être présentée dans les délais prévus par le Livre
+des procédures fiscales. Le non-respect de ces délais entraîne l’irrecevabilité de la
+réclamation, sauf exceptions prévues par la loi, notamment en cas de dégrèvement
+d’office.
+
+Les délais de réclamation sont strictement encadrés afin d’assurer la sécurité
+juridique des impositions et la stabilité des recettes publiques. En matière foncière,
+ces délais commencent généralement à courir à compter de la mise en recouvrement
+de la taxe ou de la notification de l’avis d’imposition.
+
+\subsection{Conditions de forme}
+
+La réclamation doit respecter certaines conditions de forme pour être recevable.
+Elle doit être formulée par écrit, contenir l’identification précise du contribuable,
+désigner l’imposition contestée et exposer de manière claire les moyens de fait et de
+droit invoqués à l’appui de la contestation.
+
+En matière de taxes foncières, la réclamation est souvent accompagnée de pièces
+justificatives d’ordre cadastral ou foncier, telles que des plans, des titres de
+propriété, des constats de superficie ou des attestations d’usage.
+
+\subsection{Qualité du réclamant}
+
+La réclamation contentieuse doit être présentée par une personne ayant qualité pour
+agir. Il s’agit en principe du redevable légal de la taxe foncière, c’est-à-dire du
+propriétaire ou de toute autre personne désignée par la loi comme redevable.
+
+La réclamation peut également être présentée par un représentant légal ou un
+mandataire dûment habilité. L’absence de qualité du réclamant constitue une cause
+d’irrecevabilité de la demande.
+
+\subsection{Effets juridiques de la réclamation}
+
+La présentation d’une réclamation contentieuse produit des effets juridiques
+importants. Elle oblige l’administration fiscale à procéder à l’instruction de la
+demande et à statuer par une décision expresse ou implicite.
+
+Toutefois, la réclamation n’a pas, en principe, d’effet suspensif sur le recouvrement
+de l’impôt, sauf lorsque le contribuable sollicite et obtient un sursis de paiement dans
+les conditions prévues par la loi.
+
+\section{L’instruction de la réclamation en la forme}
+
+L’instruction en la forme constitue la première étape de l’examen de la réclamation
+par l’administration fiscale. Elle vise à vérifier si la demande remplit les conditions
+légales de recevabilité.
+
+\subsection{Vérification de la recevabilité}
+
+L’administration fiscale procède à la vérification du respect des délais, de la qualité
+du réclamant et des conditions formelles de la réclamation. Cette vérification est
+préalable à tout examen au fond.
+
+En matière de taxes foncières, cette phase permet également de s’assurer que la
+réclamation porte bien sur une imposition déterminée et qu’elle relève de la
+compétence de l’administration saisie.
+
+\subsection{Demande de régularisation}
+
+Lorsque la réclamation présente des irrégularités susceptibles d’être corrigées,
+l’administration peut inviter le contribuable à régulariser sa demande dans un délai
+déterminé. Cette faculté participe au respect du principe du contradictoire et vise à
+éviter les irrecevabilités purement formelles.
+
+\subsection{Irrecevabilité et rejet}
+
+À défaut de régularisation ou lorsque les conditions de recevabilité ne sont pas
+remplies, l’administration prononce l’irrecevabilité de la réclamation. Cette décision
+doit être notifiée au contribuable et motivée.
+
+\section{L’instruction de la réclamation au fond}
+
+Lorsque la réclamation est recevable, l’administration procède à son instruction au
+fond. Cette phase constitue le cœur de la mission contentieuse.
+
+\subsection{Vérification juridique}
+
+L’instruction au fond implique une analyse juridique de la contestation, afin de
+vérifier la conformité de l’imposition aux dispositions du Code général des impôts et
+du Livre des procédures fiscales. Il s’agit notamment de contrôler l’application des
+taux, des exonérations et des règles d’assiette.
+
+\subsection{Vérification technique cadastrale}
+
+En matière de taxes foncières, l’instruction au fond comporte une dimension
+technique essentielle. Les services du cadastre, intégrés à la Direction du Cadastre et
+de la Conservation Foncière de l’Office Togolais des Recettes, sont sollicités pour
+vérifier les éléments matériels de l’imposition.
+
+Cette vérification peut porter sur la superficie, l’usage, la catégorie cadastrale ou
+l’état d’achèvement de l’immeuble. Elle constitue un élément déterminant de la
+décision administrative.
+
+\subsection{Enquêtes, visites et contrôles}
+
+Lorsque les éléments du dossier le justifient, l’administration peut procéder à des
+enquêtes, des visites sur place ou des contrôles afin de constater la réalité des faits
+allégués par le contribuable. Ces opérations doivent être conduites dans le respect
+des garanties procédurales prévues par la loi.
+
+\section{La décision administrative}
+
+À l’issue de l’instruction, l’administration fiscale statue sur la réclamation par une
+décision administrative.
+
+\subsection{Admission totale}
+
+L’admission totale intervient lorsque l’administration reconnaît le bien-fondé
+complet de la réclamation. Elle entraîne le dégrèvement intégral de l’imposition
+contestée.
+
+\subsection{Admission partielle}
+
+L’admission partielle correspond à la situation dans laquelle l’administration
+reconnaît partiellement le bien-fondé de la réclamation. Elle conduit à un dégrèvement
+partiel de la taxe foncière.
+
+\subsection{Rejet}
+
+Le rejet intervient lorsque l’administration estime que la réclamation n’est pas
+fondée. Cette décision ouvre la voie à un éventuel recours juridictionnel.
+
+\subsection{Obligation de motivation}
+
+Toute décision administrative rendue en matière contentieuse doit être motivée en
+droit et en fait. L’obligation de motivation constitue une garantie essentielle pour le
+contribuable et une condition de la légalité de la décision.
+
+\section{Le sursis de paiement}
+
+\subsection{Principe}
+
+Le sursis de paiement est une mesure par laquelle l’administration suspend
+temporairement le recouvrement de l’imposition contestée pendant l’instruction de
+la réclamation ou la phase juridictionnelle.
+
+\subsection{Conditions}
+
+Le sursis de paiement est subordonné à la présentation d’une réclamation régulière et
+à une demande expresse du contribuable. Il peut être refusé lorsque la contestation
+apparaît manifestement infondée.
+
+\subsection{Garanties exigées}
+
+Afin de préserver les intérêts du Trésor public, l’octroi du sursis de paiement peut
+être subordonné à la constitution de garanties suffisantes, telles qu’une caution ou
+une sûreté réelle, dans les conditions prévues par le Livre des procédures fiscales.
+
+\section*{Conclusion du chapitre}
+\addcontentsline{toc}{section}{Conclusion du chapitre}
+
+La procédure contentieuse en matière de taxes foncières illustre l’équilibre recherché
+par le législateur entre la protection des droits du contribuable et la sauvegarde des
+intérêts financiers des collectivités territoriales. La maîtrise de cette procédure est
+indispensable aux cadres du cadastre et de l’administration fiscale, appelés à jouer
+un rôle central dans la prévention et le règlement des litiges fonciers.
+
 
 \end{document}
